<resources>
    <string name="app_name">HabitHero</string>

    <string name="client_id">494646768591-vsg3e14dk3gcv8ai5j4q0nfmk3c38ph4.apps.googleusercontent.com</string>

    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="change_text"><u>Cambiar</u></string>
    <string name="or">O</string>
    <string name="login_google">Iniciar con Google</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="sign_up_link">Regístrate</string>

    <string name="sign_up">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="have_account">¿Ya tienes cuenta?</string>
    <string name="login_link"><u>Inicia sesión</u></string>

    <string name="reset_password">Introduzca su email de la cuenta. Le enviaremos instrucciones para restablecer su contraseña.</string>
    <string name="change_password">Cambiar contraseña</string>

    <!-- Bottom Navigation -->
    <string name="home">Inicio</string>
    <string name="stats">Estadísticas</string>
    <string name="settings">Ajustes</string>

    <!-- Home Fragment -->
    <string name="welcome_message">¡Bienvenido a HabitHero!</string>
    <string name="sub_welcome_message">Comienza añadiendo los hábitos que quieras cumplir</string>
    <string name="hello">Hola %1$s</string>

    <!-- Settings Fragment -->
    <string name="change_language">Cambiar idioma</string>
    <string name="sign_out">Cerrar sesión</string>

    <!-- Language Dialog -->
    <string name="select_language">Selecciona idioma</string>

    <!-- Delete Dialog -->
    <string name="confirm_delete">Confirmar eliminación</string>
    <string name="delete_habit">¿Estás seguro de que quieres eliminar este hábito?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>

    <!-- Timer Dialog -->
    <string name="start">Iniciar</string>
    <string name="stop">Pausar</string>
    <string name="timer_dialog">Temporizador</string>

    <!-- Add Habit Fragment -->
    <string name="habit_name">Nombre del hábito</string>
    <string name="habit_type">Tipo de hábito</string>
    <string name="label_frequency">Frecuencia</string>
    <string name="duration">Duración (minutos)</string>
    <string name="notification_time">Hora de notificación</string>
    <string name="save">Guardar</string>

    <!-- Habit Days -->
    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">X</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>

    <!-- Habit Card -->
    <string name="time">Duración: %d minutos</string>

    <!-- Habit BarChart -->
    <string name="completed">Completados</string>
    <string name="incompleted">No completados</string>

    <!-- All text -->
    <string name="all">Todos</string>
</resources>